--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class="container">
     <div class="content">
       <div class="title">
-        Проскануйте QR-код щоб отримати подарунки
+        Проскануйте QR-код щоб почати пошук ключів від подаруночної кімнати
       </div>
       <img src="./images/qr-code.png" alt="QR Code" class="qr-code">
     </div>
