--- a/gifts.html
+++ b/gifts.html
@@ -16,7 +16,7 @@
         <h1>Вітаю шукачко ключів від подаруночної</h1>
         <p>На жаль, злий чарівник накликав буревій який розкидав ключі по всій норці. А також зачарував жителів норки, щоб вони заховали ключі які залишились на видноті</p>
         <p>Тобі потрібно знайти всі ключі, щоб відкрити подаруночну і отримати свій подарунок</p>
-        <p>Але, на щастя, один добродій, що був свідком цього залишив тобі малюнки ключів та підказки, які допоможуть тобі знайти ключі, тож раджу скористатись на гаячи часу</p>
+        <p>Але, на щастя, один добродій, що був свідком цього залишив тобі малюнки ключів та підказки, які допоможуть тобі знайти ключі, тож раджу скористатись на гаючи часу</p>
         <button id="start-button">Переглянути</button>
       </div>
 
