Added main title

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <body>
   <div class="container">
     <div class="content">
+      <div class="main-title">
+        Подаруночна кімната зачинена
+      </div>
       <div class="title">
         Проскануйте QR-код щоб почати пошук ключів від подаруночної кімнати
       </div>
